[gd_scene load_steps=13 format=4 uid="uid://dwfw6lvnci6yw"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_4r282"]
[ext_resource type="TileSet" uid="uid://d3j3tms7v4la8" path="res://Scenes/tilemap.tres" id="2_l7xvb"]
[ext_resource type="AudioStream" uid="uid://c1m4a1xnnypsv" path="res://Top Hat Tactics Gameplay.ogg" id="3_lx8xy"]
[ext_resource type="PackedScene" uid="uid://cukihyasod6he" path="res://Scenes/objective.tscn" id="4_qynw6"]
[ext_resource type="PackedScene" uid="uid://dcqjcoyuhmuil" path="res://Scenes/Dragables/dragable_button.tscn" id="5_rnqe1"]
[ext_resource type="PackedScene" uid="uid://bn7p3yhyow71w" path="res://Scenes/Dragables/dragable_button2.tscn" id="6_00grs"]
[ext_resource type="PackedScene" uid="uid://co4bvk4ycpqdn" path="res://Scenes/Dragables/dragable_button3.tscn" id="7_cmody"]
[ext_resource type="PackedScene" uid="uid://rjuyenln75vs" path="res://Scenes/Dragables/dragable_button4.tscn" id="8_ntb3v"]

[sub_resource type="Environment" id="Environment_81cy2"]
background_mode = 3
background_energy_multiplier = 4.22
glow_enabled = true
glow_bloom = 0.42
fog_mode = 1
fog_light_color = Color(0.990453, 0, 0.498998, 1)
fog_light_energy = 11.5
fog_sun_scatter = 23.35
fog_density = 1.0
fog_height = 960.0

[sub_resource type="Curve2D" id="Curve2D_4rpdu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 60, -27, 0, 0, 0, 0, 59, 104, 0, 0, 0, 0, 231, 103, 0, 0, 0, 0, 231, 184, 0, 0, 0, 0, 55, 186, 0, 0, 0, 0, 57, 300, 0, 0, 0, 0, 245, 296, 0, 0, 0, 0, 245, 247, 0, 0, 0, 0, 358, 249, 0, 0, 0, 0, 361, 294, 0, 0, 0, 0, 521, 296, 0, 0, 0, 0, 520, 184, 0, 0, 0, 0, 357, 185, 0, 0, 0, 0, 359, 104, 0, 0, 0, 0, 520, 104, 0, 0, 0, 0, 522, -28)
}
point_count = 16

[sub_resource type="Curve2D" id="Curve2D_s2vw7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 521, -28, 0, 0, 0, 0, 520, 104, 0, 0, 0, 0, 358, 103, 0, 0, 0, 0, 358, 186, 0, 0, 0, 0, 520, 185, 0, 0, 0, 0, 522, 297, 0, 0, 0, 0, 360, 293, 0, 0, 0, 0, 361, 251, 0, 0, 0, 0, 246, 248, 0, 0, 0, 0, 246, 300, 0, 0, 0, 0, 58, 299, 0, 0, 0, 0, 56, 188, 0, 0, 0, 0, 230, 184, 0, 0, 0, 0, 229, 102, 0, 0, 0, 0, 60, 102, 0, 0, 0, 0, 60, -27)
}
point_count = 16

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpc7c"]
size = Vector2(119, 104.5)

[node name="Level2" type="Node2D"]
script = ExtResource("1_4r282")
level = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_81cy2")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_4rpdu")

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_s2vw7")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 288.0
offset_top = 162.0
offset_right = 288.0
offset_bottom = 162.0
color = Color(0, 0, 0, 0.847059)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
visible = false
layout_mode = 0
offset_top = 31.0
offset_right = 300.0
offset_bottom = 77.0
bbcode_enabled = true
text = "[center]THE RIVAL HATMAKER STOLE YOUR PRECIOUS HAT :([center]"
fit_content = true

[node name="retry" type="Button" parent="ColorRect"]
visible = false
layout_mode = 0
offset_left = 122.0
offset_top = 93.0
offset_right = 130.0
offset_bottom = 101.0
text = "RETRY"

[node name="win" type="Button" parent="ColorRect"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 191.0
offset_bottom = 131.0
text = "CONTINUE"

[node name="Label" type="Label" parent="."]
offset_left = 90.0
offset_top = 5.0
offset_right = 130.0
offset_bottom = 28.0

[node name="Currency" type="Label" parent="."]
offset_left = 516.0
offset_top = 11.0
offset_right = 556.0
offset_bottom = 34.0

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "START"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="Bg" type="Node" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Bg"]
z_index = -2
tile_map_data = PackedByteArray("AAAAAAAAAAACAAoAAAAAAAEAAAACAAsAAAABAAAAAAADAAoAAAABAAEAAAADAAsAAAAAAAIAAAACAAoAAAAAAAMAAAACAAsAAAABAAIAAAADAAoAAAABAAMAAAADAAsAAAAAAAQAAAACAAoAAAAAAAUAAAACAAsAAAABAAQAAAADAAoAAAABAAUAAAADAAsAAAAAAAYAAAACAAoAAAAAAAcAAAACAAsAAAABAAYAAAADAAoAAAABAAcAAAADAAsAAAAAAAgAAAACAAoAAAAAAAkAAAACAAsAAAABAAgAAAADAAoAAAABAAkAAAADAAsAAAAAAAoAAAACAAoAAAAAAAsAAAACAAsAAAABAAoAAAADAAoAAAABAAsAAAADAAsAAAAAAAwAAAACAAoAAAAAAA0AAAACAAsAAAABAAwAAAADAAoAAAABAA0AAAADAAsAAAAAAA4AAAACAAoAAAAAAA8AAAACAAsAAAABAA4AAAADAAoAAAABAA8AAAADAAsAAAAAABAAAAACAAoAAAAAABEAAAACAAsAAAABABAAAAADAAoAAAABABEAAAADAAsAAAAAABIAAAACAAoAAAAAABMAAAACAAsAAAABABIAAAADAAoAAAABABMAAAADAAsAAAACAAAAAAAAAAUAAAACAAEAAAAAAAYAAAADAAAAAAACAAUAAAADAAEAAAACAAYAAAACAAIAAAAAAAUAAAACAAMAAAAAAAYAAAADAAIAAAACAAUAAAADAAMAAAACAAYAAAACAAQAAAAAAAUAAAACAAUAAAAAAAUAAAADAAQAAAACAAUAAAADAAUAAAACAAYAAAACAAYAAAAAAAYAAAACAAcAAAAAAAcAAAADAAYAAAABAAUAAAADAAcAAAACAAcAAAACAAgAAAACAAoAAAACAAkAAAACAAsAAAADAAgAAAADAAoAAAADAAkAAAADAAsAAAACAAoAAAAAAAQAAAACAAsAAAAAAAUAAAADAAoAAAACAAQAAAADAAsAAAABAAUAAAACAAwAAAAAAAYAAAACAA0AAAAAAAUAAAADAAwAAAACAAUAAAADAA0AAAACAAYAAAACAA4AAAAAAAYAAAACAA8AAAAAAAUAAAADAA4AAAACAAUAAAADAA8AAAACAAYAAAACABAAAAAAAAYAAAACABEAAAAAAAUAAAADABAAAAACAAUAAAADABEAAAACAAYAAAACABIAAAAAAAYAAAACABMAAAAAAAcAAAADABIAAAABAAUAAAADABMAAAACAAcAAAAEAAAAAAADAAUAAAAEAAEAAAADAAYAAAAFAAAAAAADAAoAAAAFAAEAAAADAAsAAAAEAAIAAAADAAUAAAAEAAMAAAADAAUAAAAFAAIAAAADAAoAAAAFAAMAAAADAAsAAAAEAAQAAAADAAYAAAAEAAUAAAAFAAQAAAAFAAQAAAADAAoAAAAFAAUAAAABAAQAAAAEAAYAAAACAAUAAAAEAAcAAAABAAcAAAAFAAYAAAABAAUAAAAFAAcAAAACAAcAAAAEAAgAAAACAAoAAAAEAAkAAAACAAsAAAAFAAgAAAADAAoAAAAFAAkAAAADAAsAAAAEAAoAAAABAAQAAAAEAAsAAAACAAUAAAAFAAoAAAACAAQAAAAFAAsAAAABAAUAAAAEAAwAAAAFAAUAAAAEAA0AAAADAAUAAAAFAAwAAAACAAcAAAAFAA0AAAADAAsAAAAEAA4AAAADAAYAAAAEAA8AAAADAAUAAAAFAA4AAAADAAoAAAAFAA8AAAADAAsAAAAEABAAAAADAAYAAAAEABEAAAAFAAQAAAAFABAAAAADAAoAAAAFABEAAAABAAQAAAAEABIAAAACAAUAAAAEABMAAAABAAcAAAAFABIAAAABAAUAAAAFABMAAAACAAcAAAAGAAAAAAACAAoAAAAGAAEAAAACAAsAAAAHAAAAAAADAAoAAAAHAAEAAAADAAsAAAAGAAIAAAACAAoAAAAGAAMAAAACAAsAAAAHAAIAAAADAAoAAAAHAAMAAAADAAsAAAAGAAQAAAACAAoAAAAGAAUAAAACAAQAAAAHAAQAAAADAAoAAAAHAAUAAAABAAQAAAAGAAYAAAACAAUAAAAGAAcAAAABAAcAAAAHAAYAAAABAAUAAAAHAAcAAAACAAcAAAAGAAgAAAACAAoAAAAGAAkAAAACAAsAAAAHAAgAAAADAAoAAAAHAAkAAAADAAsAAAAGAAoAAAABAAQAAAAGAAsAAAACAAUAAAAHAAoAAAACAAQAAAAHAAsAAAABAAUAAAAGAAwAAAABAAcAAAAGAA0AAAACAAsAAAAHAAwAAAACAAcAAAAHAA0AAAADAAsAAAAGAA4AAAACAAoAAAAGAA8AAAACAAsAAAAHAA4AAAADAAoAAAAHAA8AAAADAAsAAAAGABAAAAACAAoAAAAGABEAAAACAAQAAAAHABAAAAADAAoAAAAHABEAAAABAAQAAAAGABIAAAACAAUAAAAGABMAAAABAAcAAAAHABIAAAABAAUAAAAHABMAAAACAAcAAAAIAAAAAAACAAoAAAAIAAEAAAACAAsAAAAJAAAAAAADAAoAAAAJAAEAAAADAAsAAAAIAAIAAAACAAoAAAAIAAMAAAACAAsAAAAJAAIAAAADAAoAAAAJAAMAAAADAAsAAAAIAAQAAAACAAoAAAAIAAUAAAACAAQAAAAJAAQAAAADAAoAAAAJAAUAAAABAAQAAAAIAAYAAAACAAUAAAAIAAcAAAABAAcAAAAJAAYAAAABAAUAAAAJAAcAAAACAAcAAAAIAAgAAAACAAoAAAAIAAkAAAACAAsAAAAJAAgAAAADAAoAAAAJAAkAAAADAAsAAAAIAAoAAAABAAQAAAAIAAsAAAACAAUAAAAJAAoAAAACAAQAAAAJAAsAAAABAAUAAAAIAAwAAAABAAcAAAAIAA0AAAACAAsAAAAJAAwAAAACAAcAAAAJAA0AAAADAAsAAAAIAA4AAAACAAoAAAAIAA8AAAACAAsAAAAJAA4AAAADAAoAAAAJAA8AAAADAAsAAAAIABAAAAACAAoAAAAIABEAAAACAAQAAAAJABAAAAADAAoAAAAJABEAAAABAAQAAAAIABIAAAACAAUAAAAIABMAAAABAAcAAAAJABIAAAABAAUAAAAJABMAAAACAAcAAAAKAAAAAAACAAoAAAAKAAEAAAACAAsAAAALAAAAAAADAAoAAAALAAEAAAADAAsAAAAKAAIAAAACAAoAAAAKAAMAAAACAAsAAAALAAIAAAADAAoAAAALAAMAAAADAAsAAAAKAAQAAAACAAoAAAAKAAUAAAACAAQAAAALAAQAAAADAAoAAAALAAUAAAABAAQAAAAKAAYAAAACAAUAAAAKAAcAAAABAAcAAAALAAYAAAABAAUAAAALAAcAAAABAAcAAAAKAAgAAAACAAoAAAAKAAkAAAACAAsAAAALAAgAAAADAAoAAAALAAkAAAADAAsAAAAKAAoAAAABAAQAAAAKAAsAAAACAAUAAAALAAoAAAABAAQAAAALAAsAAAABAAUAAAAKAAwAAAABAAcAAAAKAA0AAAACAAsAAAALAAwAAAACAAcAAAALAA0AAAADAAsAAAAKAA4AAAACAAoAAAAKAA8AAAACAAsAAAALAA4AAAADAAoAAAALAA8AAAADAAsAAAAKABAAAAACAAoAAAAKABEAAAACAAQAAAALABAAAAADAAoAAAALABEAAAABAAQAAAAKABIAAAACAAUAAAAKABMAAAABAAcAAAALABIAAAABAAUAAAALABMAAAACAAcAAAAMAAAAAAACAAoAAAAMAAEAAAACAAsAAAANAAAAAAADAAoAAAANAAEAAAADAAsAAAAMAAIAAAACAAoAAAAMAAMAAAACAAsAAAANAAIAAAADAAoAAAANAAMAAAADAAsAAAAMAAQAAAACAAoAAAAMAAUAAAACAAQAAAANAAQAAAADAAoAAAANAAUAAAABAAQAAAAMAAYAAAACAAUAAAAMAAcAAAACAAcAAAANAAYAAAABAAUAAAANAAcAAAAEAAUAAAAMAAgAAAACAAoAAAAMAAkAAAACAAsAAAANAAgAAAAAAAYAAAANAAkAAAAAAAUAAAAMAAoAAAACAAQAAAAMAAsAAAACAAUAAAANAAoAAAAEAAQAAAANAAsAAAABAAUAAAAMAAwAAAABAAcAAAAMAA0AAAACAAsAAAANAAwAAAACAAcAAAANAA0AAAADAAsAAAAMAA4AAAACAAoAAAAMAA8AAAACAAsAAAANAA4AAAADAAoAAAANAA8AAAADAAsAAAAMABAAAAACAAoAAAAMABEAAAACAAQAAAANABAAAAADAAoAAAANABEAAAABAAQAAAAMABIAAAACAAUAAAAMABMAAAABAAcAAAANABIAAAABAAUAAAANABMAAAABAAcAAAAOAAAAAAACAAoAAAAOAAEAAAACAAsAAAAPAAAAAAADAAoAAAAPAAEAAAADAAsAAAAOAAIAAAACAAoAAAAOAAMAAAACAAsAAAAPAAIAAAADAAoAAAAPAAMAAAADAAsAAAAOAAQAAAACAAoAAAAOAAUAAAABAAQAAAAPAAQAAAADAAoAAAAPAAUAAAADAAQAAAAOAAYAAAACAAUAAAAOAAcAAAACAAUAAAAPAAYAAAADAAUAAAAPAAcAAAADAAYAAAAOAAgAAAACAAYAAAAOAAkAAAACAAUAAAAPAAgAAAADAAUAAAAPAAkAAAADAAYAAAAOAAoAAAACAAYAAAAOAAsAAAACAAUAAAAPAAoAAAADAAUAAAAPAAsAAAADAAYAAAAOAAwAAAABAAcAAAAOAA0AAAACAAsAAAAPAAwAAAAFAAcAAAAPAA0AAAADAAsAAAAOAA4AAAAAAAQAAAAOAA8AAAAAAAUAAAAPAA4AAAABAAQAAAAPAA8AAAACAAUAAAAOABAAAAAAAAYAAAAOABEAAAAEAAQAAAAPABAAAAACAAYAAAAPABEAAAACAAUAAAAOABIAAAACAAUAAAAOABMAAAABAAcAAAAPABIAAAACAAYAAAAPABMAAAACAAcAAAAQAAAAAAACAAoAAAAQAAEAAAACAAsAAAARAAAAAAADAAoAAAARAAEAAAADAAsAAAAQAAIAAAACAAoAAAAQAAMAAAACAAsAAAARAAIAAAADAAoAAAARAAMAAAADAAsAAAAQAAQAAAACAAoAAAAQAAUAAAACAAsAAAARAAQAAAADAAoAAAARAAUAAAADAAsAAAAQAAYAAAACAAoAAAAQAAcAAAACAAsAAAARAAYAAAADAAoAAAARAAcAAAADAAsAAAAQAAgAAAACAAoAAAAQAAkAAAACAAsAAAARAAgAAAADAAoAAAARAAkAAAADAAsAAAAQAAoAAAACAAoAAAAQAAsAAAACAAsAAAARAAoAAAADAAoAAAARAAsAAAADAAsAAAAQAAwAAAACAAoAAAAQAA0AAAACAAsAAAARAAwAAAADAAoAAAARAA0AAAADAAsAAAAQAA4AAAACAAQAAAAQAA8AAAABAAUAAAARAA4AAAABAAQAAAARAA8AAAACAAUAAAAQABAAAAAFAAUAAAAQABEAAAADAAUAAAARABAAAAABAAcAAAARABEAAAADAAsAAAAQABIAAAADAAYAAAAQABMAAAADAAcAAAARABIAAAADAAoAAAARABMAAAADAAsAAAASAAAAAAACAAoAAAASAAEAAAACAAsAAAATAAAAAAADAAoAAAATAAEAAAADAAsAAAASAAIAAAACAAoAAAASAAMAAAACAAsAAAATAAIAAAADAAoAAAATAAMAAAADAAsAAAASAAQAAAACAAoAAAASAAUAAAACAAsAAAATAAQAAAADAAoAAAATAAUAAAADAAsAAAASAAYAAAACAAoAAAASAAcAAAACAAsAAAATAAYAAAADAAoAAAATAAcAAAADAAsAAAASAAgAAAACAAoAAAASAAkAAAACAAsAAAATAAgAAAADAAoAAAATAAkAAAADAAsAAAASAAoAAAACAAoAAAASAAsAAAACAAsAAAATAAoAAAADAAoAAAATAAsAAAADAAsAAAASAAwAAAACAAoAAAASAA0AAAACAAsAAAATAAwAAAADAAoAAAATAA0AAAADAAsAAAASAA4AAAACAAQAAAASAA8AAAABAAUAAAATAA4AAAABAAQAAAATAA8AAAACAAUAAAASABAAAAACAAcAAAASABEAAAACAAsAAAATABAAAAABAAcAAAATABEAAAADAAsAAAASABIAAAACAAoAAAASABMAAAACAAsAAAATABIAAAADAAoAAAATABMAAAADAAsAAAAUAAAAAAACAAoAAAAUAAEAAAACAAsAAAAVAAAAAAADAAoAAAAVAAEAAAADAAsAAAAUAAIAAAACAAoAAAAUAAMAAAACAAsAAAAVAAIAAAADAAoAAAAVAAMAAAADAAsAAAAUAAQAAAACAAoAAAAUAAUAAAACAAsAAAAVAAQAAAADAAoAAAAVAAUAAAAAAAQAAAAUAAYAAAACAAoAAAAUAAcAAAACAAsAAAAVAAYAAAAAAAUAAAAVAAcAAAAAAAYAAAAUAAgAAAACAAoAAAAUAAkAAAACAAsAAAAVAAgAAAAAAAUAAAAVAAkAAAAAAAYAAAAUAAoAAAACAAoAAAAUAAsAAAACAAsAAAAVAAoAAAAAAAUAAAAVAAsAAAAAAAYAAAAUAAwAAAACAAoAAAAUAA0AAAACAAsAAAAVAAwAAAAAAAcAAAAVAA0AAAADAAsAAAAUAA4AAAACAAQAAAAUAA8AAAABAAUAAAAVAA4AAAABAAQAAAAVAA8AAAACAAUAAAAUABAAAAABAAcAAAAUABEAAAACAAsAAAAVABAAAAAEAAUAAAAVABEAAAAAAAUAAAAUABIAAAACAAoAAAAUABMAAAACAAsAAAAVABIAAAAAAAYAAAAVABMAAAAAAAcAAAAWAAAAAAACAAoAAAAWAAEAAAACAAsAAAAXAAAAAAADAAoAAAAXAAEAAAADAAsAAAAWAAIAAAACAAoAAAAWAAMAAAACAAsAAAAXAAIAAAADAAoAAAAXAAMAAAADAAsAAAAWAAQAAAACAAoAAAAWAAUAAAABAAQAAAAXAAQAAAADAAoAAAAXAAUAAAACAAQAAAAWAAYAAAABAAUAAAAWAAcAAAABAAUAAAAXAAYAAAACAAUAAAAXAAcAAAAFAAUAAAAWAAgAAAABAAYAAAAWAAkAAAABAAUAAAAXAAgAAAADAAUAAAAXAAkAAAADAAYAAAAWAAoAAAABAAYAAAAWAAsAAAABAAUAAAAXAAoAAAAFAAQAAAAXAAsAAAACAAUAAAAWAAwAAAACAAcAAAAWAA0AAAACAAsAAAAXAAwAAAABAAcAAAAXAA0AAAADAAsAAAAWAA4AAAACAAQAAAAWAA8AAAACAAUAAAAXAA4AAAADAAQAAAAXAA8AAAADAAUAAAAWABAAAAACAAYAAAAWABEAAAACAAUAAAAXABAAAAADAAYAAAAXABEAAAAFAAQAAAAWABIAAAACAAYAAAAWABMAAAABAAcAAAAXABIAAAABAAUAAAAXABMAAAABAAcAAAAYAAAAAAACAAoAAAAYAAEAAAACAAsAAAAZAAAAAAADAAoAAAAZAAEAAAADAAsAAAAYAAIAAAACAAoAAAAYAAMAAAACAAsAAAAZAAIAAAADAAoAAAAZAAMAAAADAAsAAAAYAAQAAAACAAoAAAAYAAUAAAABAAQAAAAZAAQAAAADAAoAAAAZAAUAAAACAAQAAAAYAAYAAAABAAUAAAAYAAcAAAACAAcAAAAZAAYAAAACAAUAAAAZAAcAAAABAAcAAAAYAAgAAAACAAoAAAAYAAkAAAACAAsAAAAZAAgAAAADAAoAAAAZAAkAAAADAAsAAAAYAAoAAAACAAQAAAAYAAsAAAABAAUAAAAZAAoAAAABAAQAAAAZAAsAAAACAAUAAAAYAAwAAAACAAcAAAAYAA0AAAACAAsAAAAZAAwAAAABAAcAAAAZAA0AAAADAAsAAAAYAA4AAAACAAoAAAAYAA8AAAACAAsAAAAZAA4AAAADAAoAAAAZAA8AAAADAAsAAAAYABAAAAACAAoAAAAYABEAAAACAAQAAAAZABAAAAADAAoAAAAZABEAAAABAAQAAAAYABIAAAACAAUAAAAYABMAAAACAAcAAAAZABIAAAABAAUAAAAZABMAAAABAAcAAAAaAAAAAAACAAoAAAAaAAEAAAACAAsAAAAbAAAAAAADAAoAAAAbAAEAAAADAAsAAAAaAAIAAAACAAoAAAAaAAMAAAACAAsAAAAbAAIAAAADAAoAAAAbAAMAAAADAAsAAAAaAAQAAAACAAoAAAAaAAUAAAABAAQAAAAbAAQAAAADAAoAAAAbAAUAAAACAAQAAAAaAAYAAAABAAUAAAAaAAcAAAACAAcAAAAbAAYAAAACAAUAAAAbAAcAAAABAAcAAAAaAAgAAAACAAoAAAAaAAkAAAACAAsAAAAbAAgAAAADAAoAAAAbAAkAAAADAAsAAAAaAAoAAAACAAQAAAAaAAsAAAABAAUAAAAbAAoAAAABAAQAAAAbAAsAAAACAAUAAAAaAAwAAAACAAcAAAAaAA0AAAACAAsAAAAbAAwAAAABAAcAAAAbAA0AAAADAAsAAAAaAA4AAAACAAoAAAAaAA8AAAACAAsAAAAbAA4AAAADAAoAAAAbAA8AAAADAAsAAAAaABAAAAACAAoAAAAaABEAAAACAAQAAAAbABAAAAADAAoAAAAbABEAAAABAAQAAAAaABIAAAACAAUAAAAaABMAAAACAAcAAAAbABIAAAABAAUAAAAbABMAAAABAAcAAAAcAAAAAAACAAoAAAAcAAEAAAACAAsAAAAdAAAAAAADAAoAAAAdAAEAAAADAAsAAAAcAAIAAAACAAoAAAAcAAMAAAACAAsAAAAdAAIAAAADAAoAAAAdAAMAAAADAAsAAAAcAAQAAAACAAoAAAAcAAUAAAABAAQAAAAdAAQAAAADAAoAAAAdAAUAAAACAAQAAAAcAAYAAAABAAUAAAAcAAcAAAACAAcAAAAdAAYAAAACAAUAAAAdAAcAAAABAAcAAAAcAAgAAAACAAoAAAAcAAkAAAACAAsAAAAdAAgAAAADAAoAAAAdAAkAAAADAAsAAAAcAAoAAAACAAQAAAAcAAsAAAABAAUAAAAdAAoAAAABAAQAAAAdAAsAAAACAAUAAAAcAAwAAAACAAcAAAAcAA0AAAACAAsAAAAdAAwAAAABAAcAAAAdAA0AAAADAAsAAAAcAA4AAAACAAoAAAAcAA8AAAACAAsAAAAdAA4AAAADAAoAAAAdAA8AAAADAAsAAAAcABAAAAACAAoAAAAcABEAAAACAAQAAAAdABAAAAADAAoAAAAdABEAAAABAAQAAAAcABIAAAACAAUAAAAcABMAAAACAAcAAAAdABIAAAABAAUAAAAdABMAAAABAAcAAAAeAAAAAAACAAoAAAAeAAEAAAACAAsAAAAfAAAAAAAAAAUAAAAfAAEAAAAAAAYAAAAeAAIAAAACAAoAAAAeAAMAAAACAAsAAAAfAAIAAAAAAAUAAAAfAAMAAAAAAAYAAAAeAAQAAAACAAoAAAAeAAUAAAABAAQAAAAfAAQAAAAAAAUAAAAfAAUAAAAEAAQAAAAeAAYAAAABAAUAAAAeAAcAAAACAAcAAAAfAAYAAAABAAUAAAAfAAcAAAABAAcAAAAeAAgAAAACAAoAAAAeAAkAAAACAAsAAAAfAAgAAAADAAoAAAAfAAkAAAADAAsAAAAeAAoAAAACAAQAAAAeAAsAAAABAAUAAAAfAAoAAAABAAQAAAAfAAsAAAABAAUAAAAeAAwAAAACAAcAAAAeAA0AAAACAAsAAAAfAAwAAAAEAAUAAAAfAA0AAAAAAAYAAAAeAA4AAAACAAoAAAAeAA8AAAACAAsAAAAfAA4AAAAAAAUAAAAfAA8AAAAAAAYAAAAeABAAAAACAAoAAAAeABEAAAACAAQAAAAfABAAAAAAAAUAAAAfABEAAAAEAAQAAAAeABIAAAACAAUAAAAeABMAAAACAAcAAAAfABIAAAABAAUAAAAfABMAAAABAAcAAAAgAAAAAAACAAUAAAAgAAEAAAACAAYAAAAhAAAAAAADAAUAAAAhAAEAAAADAAYAAAAgAAIAAAACAAUAAAAgAAMAAAACAAYAAAAhAAIAAAADAAUAAAAhAAMAAAADAAYAAAAgAAQAAAACAAUAAAAgAAUAAAACAAYAAAAhAAQAAAADAAUAAAAhAAUAAAADAAYAAAAgAAYAAAACAAUAAAAgAAcAAAACAAcAAAAhAAYAAAADAAUAAAAhAAcAAAADAAcAAAAgAAgAAAACAAoAAAAgAAkAAAACAAsAAAAhAAgAAAADAAoAAAAhAAkAAAADAAsAAAAgAAoAAAACAAQAAAAgAAsAAAACAAUAAAAhAAoAAAADAAQAAAAhAAsAAAADAAUAAAAgAAwAAAACAAUAAAAgAA0AAAACAAYAAAAhAAwAAAADAAYAAAAhAA0AAAADAAUAAAAgAA4AAAACAAUAAAAgAA8AAAACAAYAAAAhAA4AAAADAAYAAAAhAA8AAAADAAUAAAAgABAAAAACAAUAAAAgABEAAAACAAYAAAAhABAAAAADAAYAAAAhABEAAAADAAUAAAAgABIAAAACAAUAAAAgABMAAAACAAcAAAAhABIAAAADAAYAAAAhABMAAAADAAcAAAAiAAAAAAACAAoAAAAiAAEAAAACAAsAAAAjAAAAAAADAAoAAAAjAAEAAAADAAsAAAAiAAIAAAACAAoAAAAiAAMAAAACAAsAAAAjAAIAAAADAAoAAAAjAAMAAAADAAsAAAAiAAQAAAACAAoAAAAiAAUAAAACAAsAAAAjAAQAAAADAAoAAAAjAAUAAAADAAsAAAAiAAYAAAACAAoAAAAiAAcAAAACAAsAAAAjAAYAAAADAAoAAAAjAAcAAAADAAsAAAAiAAgAAAACAAoAAAAiAAkAAAACAAsAAAAjAAgAAAADAAoAAAAjAAkAAAADAAsAAAAiAAoAAAACAAoAAAAiAAsAAAACAAsAAAAjAAoAAAADAAoAAAAjAAsAAAADAAsAAAAiAAwAAAACAAoAAAAiAA0AAAACAAsAAAAjAAwAAAADAAoAAAAjAA0AAAADAAsAAAAiAA4AAAACAAoAAAAiAA8AAAACAAsAAAAjAA4AAAADAAoAAAAjAA8AAAADAAsAAAAiABAAAAACAAoAAAAiABEAAAACAAsAAAAjABAAAAADAAoAAAAjABEAAAADAAsAAAAiABIAAAACAAoAAAAiABMAAAACAAsAAAAjABIAAAADAAoAAAAjABMAAAADAAsAAAA=")
tile_set = ExtResource("2_l7xvb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["Music"]]
stream = ExtResource("3_lx8xy")
autoplay = true

[node name="Objective" parent="." instance=ExtResource("4_qynw6")]
position = Vector2(298, 244)

[node name="Finish" type="Area2D" parent="."]

[node name="death" type="CollisionShape2D" parent="Finish"]
position = Vector2(56, -58)
shape = SubResource("RectangleShape2D_vpc7c")

[node name="Finish2" type="Area2D" parent="."]
position = Vector2(468, 0)

[node name="death" type="CollisionShape2D" parent="Finish2"]
position = Vector2(56, -58)
shape = SubResource("RectangleShape2D_vpc7c")

[node name="Unplaceable" type="Area2D" parent="."]

[node name="Unplaceable" type="CollisionPolygon2D" parent="Unplaceable"]
polygon = PackedVector2Array(40, -3, 40, 120, 216, 120, 216, 168, 40, 168, 40, 312, 264, 312, 264, 264, 344, 264, 344, 311, 344, 312, 536, 312, 536, 168, 376, 168, 376, 120, 536, 120, 536, -2, 504, -2, 504, 88, 344, 88, 344, 200, 504, 200, 504, 280, 376, 280, 376, 232, 232, 232, 232, 280, 72, 280, 72, 200, 247, 200, 248, 200, 248, 88, 72, 88, 72, -1)

[node name="ICONS" type="ColorRect" parent="."]
offset_left = 476.0
offset_top = 224.0
offset_right = 576.0
offset_bottom = 324.0
color = Color(0, 0, 0, 0.658824)

[node name="turret_1" parent="ICONS" instance=ExtResource("5_rnqe1")]
layout_mode = 0
offset_left = 65.0
offset_top = 48.0
offset_right = 98.0
offset_bottom = 82.0

[node name="turret_2" parent="ICONS" instance=ExtResource("6_00grs")]
layout_mode = 0
offset_left = 5.0
offset_top = 48.0
offset_right = 45.0
offset_bottom = 88.0

[node name="turret_3" parent="ICONS" instance=ExtResource("7_cmody")]
layout_mode = 0
offset_left = 60.0
offset_right = 100.0

[node name="turret_4" parent="ICONS" instance=ExtResource("8_ntb3v")]
layout_mode = 0
offset_right = 48.0

[node name="Label2" type="Label" parent="ICONS"]
layout_mode = 0
offset_left = 18.0
offset_top = 78.0
offset_right = 83.0
offset_bottom = 101.0
text = "50 EACH"

[connection signal="pressed" from="ColorRect/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="ColorRect/win" to="." method="_on_win_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Finish" to="." method="_on_finish_area_entered"]
[connection signal="area_entered" from="Finish2" to="." method="_on_finish_2_area_entered"]
